--- a/pet-clinic/src/app/components/owners-list/owners-list.component.html
+++ b/pet-clinic/src/app/components/owners-list/owners-list.component.html
@@ -1,5 +1,29 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
-        <p>owners-list works!</p>
+        <h2>Pet Owners</h2>
+        <table class="table table-bordered">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>City</th>
+                <th>Address</th>
+                <th>Pets</th>
+            </tr>
+            <tr *ngFor="let tempOwner of owners">
+                <td>{{tempOwner.firstName}}</td>
+                <td>{{tempOwner.lastName}}</td>
+                <td>{{tempOwner.phoneNumber}}</td>
+                <td>{{tempOwner.email}}</td>
+                <td>{{tempOwner.city}}</td>
+                <td>{{tempOwner.address}}</td>
+                <td>
+                    <span *ngFor="let tempPet of tempOwner.pets; let isLast = last">
+                        {{tempPet.name}}{{isLast?'':','}}
+                    </span>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
