--- a/pet-clinic/src/app/components/home/home.component.html
+++ b/pet-clinic/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
-        <p>Welcome to our pet clinic</p>
+        <div class="container-fluid">
+            <p>Welcome to our pet clinic, where we successfully healed some pets</p>
+        </div>
     </div>
 </div>
