--- a/pet-clinic/src/app/app.component.html
+++ b/pet-clinic/src/app/app.component.html
@@ -7,9 +7,11 @@
     <div class="section-content section-content-p30">
       
         <div class="header-wrap">
-          <img src="assets/images/stub.png">
-          <img src="assets/images/logo1.png" class="img-responsive logo1">
-          <img src="assets/images/logo2.png" class="img-responsive logo2">
+          <a routerLink="/home">
+            <img src="assets/images/stub.png">
+            <img src="assets/images/logo1.png" class="img-responsive logo1">
+            <img src="assets/images/logo2.png" class="img-responsive logo2">
+          </a>
           
           <div class="nav-bar">
             <ul>
