--- a/pet-clinic/src/styles.css
+++ b/pet-clinic/src/styles.css
@@ -46,7 +46,7 @@
 }
 
 .main-content{
-    padding-top:80px;
+    padding-top:95px;
     min-height:100vh;
     font-size: 20px;
 }
@@ -59,6 +59,79 @@
 
 .section-content-p30{
     padding:0 30px
+}
+
+.btn-submit{
+    position:relative;
+    right:10px;
+    min-width:auto;
+    color:#fff;
+    border:1px solid #29a819;
+    -webkit-border-radius:10px;
+    -moz-border-radius:10px;
+    border-radius:10px;
+    padding: 10px 15px;
+    background:#29a819;
+    white-space: nowrap;
+}
+
+.actions{
+    display:-webkit-box;
+    display:-webkit-flex;
+    display:-moz-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-pack:center;
+    -webkit-justify-content:center;
+    -moz-box-pack:center;
+    -ms-flex-pack:center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.actions input[type=text]{
+    min-width: 200px;
+    width: 600px;
+    outline:0;
+    padding:10px;
+    border:1px solid #ccc;
+    border-radius:10px;
+    margin-right: 5px;
+}
+
+
+.actions button{
+    margin-left: 30px;
+}
+
+.input-space{
+    margin-bottom:20px
+}
+
+.input-space input[type=text]{
+    width:100%;
+    height:40px;
+    border-radius:30px;
+    outline:0;
+    padding:10px;
+    border:1px solid #ccc
+}
+.input-space select{
+    width:100%;
+    height:40px;
+    border-radius:30px;
+    outline:0;
+    padding:0 10px;
+    border:1px solid #ccc
+}
+
+.form-area{
+    max-width: 800px;
+    background:#abcca2;
+    position:relative;
+    margin-bottom:45px;
+    padding:50px 20px;
+    border:3px solid #82a079
 }
 
 .nav-bar{
