modified home page. add new owner page

--- a/pet-clinic/src/app/components/home/home.component.html
+++ b/pet-clinic/src/app/components/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
         <div class="container-fluid">
-            <p>Welcome to our pet clinic, where we successfully healed some pets</p>
+            <div class="text-center">
+                <img src="assets/images/pet.jpg" class="img-responsive">
+                <p>Welcome to our pet clinic, where we successfully healed some pets</p>
+            </div>
         </div>
     </div>
 </div>
