--- a/pet-clinic/src/app/components/owners-list/owners-list.component.html
+++ b/pet-clinic/src/app/components/owners-list/owners-list.component.html
@@ -17,7 +17,7 @@
             </tr>
             <tr *ngFor="let tempOwner of owners">
                 <td>
-                    <button routerLink="/owners/{{tempOwner.id}}" class="btn btn-sm btn-outline-success">info</button>
+                    <button routerLink="/owners/{{tempOwner.id}}" class="btn btn-sm btn-success bg-success">info</button>
                 </td>
                 <td>{{tempOwner.firstName}}</td>
                 <td>{{tempOwner.lastName}}</td>
