--- a/pet-clinic/src/styles.css
+++ b/pet-clinic/src/styles.css
@@ -104,10 +104,6 @@
     margin-left: 30px;
 }
 
-.input-space{
-    margin-bottom:20px
-}
-
 .input-space input[type=text]{
     width:100%;
     height:40px;
@@ -126,12 +122,22 @@
 }
 
 .form-area{
-    max-width: 800px;
+    max-width: 850px;
     background:#abcca2;
     position:relative;
     margin-bottom:45px;
     padding:50px 20px;
     border:3px solid #82a079
+}
+
+.info-area{
+    max-width: 1000px;
+    background:#abcca2;
+    border:3px solid #82a079;
+    padding:50px 20px;
+}
+.info-area button{
+    display: inline-block ;
 }
 
 .nav-bar{
