added custom phone pipe

--- a/pet-clinic/src/app/components/owners-list/owners-list.component.html
+++ b/pet-clinic/src/app/components/owners-list/owners-list.component.html
@@ -21,7 +21,7 @@
                 </td>
                 <td>{{tempOwner.firstName}}</td>
                 <td>{{tempOwner.lastName}}</td>
-                <td>{{tempOwner.phoneNumber}}</td>
+                <td>{{tempOwner.phoneNumber | phone}}</td>
                 <td>{{tempOwner.email}}</td>
             </tr>
         </table>
