added custom phone number validator

--- a/pet-clinic/src/app/components/add-owner/add-owner.component.html
+++ b/pet-clinic/src/app/components/add-owner/add-owner.component.html
@@ -48,7 +48,7 @@
                                 <div *ngIf="phoneNumber.errors.required">
                                     Phone Number is required
                                 </div>
-                                <div *ngIf="phoneNumber.errors.pattern">
+                                <div *ngIf="phoneNumber.errors.validPhone">
                                     Phone Number must be 10 digits
                                 </div>
                             </div>
