--- a/pet-clinic/src/app/components/owner-info/owner-info.component.html
+++ b/pet-clinic/src/app/components/owner-info/owner-info.component.html
@@ -50,7 +50,7 @@
                             <div *ngIf="phoneNumber.errors.required">
                                 Phone Number is required
                             </div>
-                            <div *ngIf="phoneNumber.errors.pattern">
+                            <div *ngIf="phoneNumber.errors.validPhone">
                                 Phone Number must be 10 digits
                             </div>
                         </div>
