added oauth 2.0 authentication with keycloak

--- a/pet-clinic/src/app/app.component.html
+++ b/pet-clinic/src/app/app.component.html
@@ -18,6 +18,7 @@
               <li><a routerLink="/home" routerLinkActive="active-link">Home</a></li>
               <li><a routerLink="/owners" routerLinkActive="active-link">Owners</a></li>
               <li><a routerLink="/vets" routerLinkActive="active-link">Vets</a></li>
+              <app-logout></app-logout>
             </ul>
           </div>
         
