--- a/pet-clinic/src/app/components/home/home.component.html
+++ b/pet-clinic/src/app/components/home/home.component.html
@@ -1,10 +1,25 @@
 <div class="main-content">
     <div class="section-content section-content-p30">
         <div class="container-fluid">
-            <div class="text-center">
-                <img src="assets/images/pet.jpg" class="img-responsive">
-                <p>Welcome to our pet clinic, where we successfully healed some pets</p>
-            </div>
+            
+                <div class="home-img d-block mx-auto">
+                    <img src="assets/images/pet.jpg" class="img-fluid rounded">
+                </div>
+                <div class="mx-5">
+                    <p>Welcome to my <b>Pet Clinic App</b>.</p>
+                    <p>To access Owners and Vets pages you need backend app running.</p>
+                    <p>Login credentials:</p>
+                    <ul>
+                        <li>Username: <b>user_one</b></li>
+                        <li>Password: <b>qwerty</b></li>
+                    </ul>
+                    <p>After starting backend app you also can access Keycloak server at http://localhost:8443</p>
+                    <p>Login credentials for admin console:</p>
+                    <ul>
+                        <li>Username: <b>admin</b></li>
+                        <li>Password: <b>admin</b></li>
+                    </ul>
+                </div>
         </div>
     </div>
 </div>
