--- a/pet-clinic/src/app/components/home/home.component.html
+++ b/pet-clinic/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
                         <li>Username: <b>user_one</b></li>
                         <li>Password: <b>qwerty</b></li>
                     </ul>
-                    <p>After starting backend app you also can access Keycloak server at http://localhost:8443</p>
+                    <p>After starting backend app you also can access Keycloak server at <a href="https://localhost:8443">https://localhost:8443</a></p>
                     <p>Login credentials for admin console:</p>
                     <ul>
                         <li>Username: <b>admin</b></li>
