--- a/pet-clinic/src/app/components/owners-list/owners-list.component.html
+++ b/pet-clinic/src/app/components/owners-list/owners-list.component.html
@@ -9,7 +9,7 @@
         </div>
         <table class="table table-bordered">
             <tr>
-                <th></th>
+                <th>Edit</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Phone Number</th>
