--- a/pet-clinic/src/app/components/home/home.component.html
+++ b/pet-clinic/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="mx-5">
                     <p>Welcome to my <b>Pet Clinic App</b>.</p>
-                    <p>To access Owners and Vets pages you need backend app running.</p>
+                    <p>To access Owners and Vets pages you need <a href="https://github.com/m-saz/pet-clinic-backend">backend app</a> running.</p>
                     <p>Login credentials:</p>
                     <ul>
                         <li>Username: <b>user_one</b></li>
