--- a/pet-clinic/src/app/components/owners-list/owners-list.component.html
+++ b/pet-clinic/src/app/components/owners-list/owners-list.component.html
@@ -10,10 +10,10 @@
         <table class="table table-bordered">
             <tr>
                 <th>Edit</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Phone Number</th>
-                <th>Email</th>
+                <th width="20%">First Name</th>
+                <th width="25%">Last Name</th>
+                <th width="25%">Phone Number</th>
+                <th width="25%">Email</th>
             </tr>
             <tr *ngFor="let tempOwner of owners">
                 <td>
@@ -25,5 +25,15 @@
                 <td>{{tempOwner.email}}</td>
             </tr>
         </table>
+        <div class="d-flex justify-content-end align-items-center">
+            <p class="mx-3">Displaying {{pageSize}} Owners per page</p>
+            <ngb-pagination [(page)]="page"
+                            [pageSize]="pageSize"
+                            [collectionSize]="totalElements"
+                            (pageChange)="listOwners()"
+                            [maxSize]="5"
+                            [boundaryLinks]="true">
+            </ngb-pagination>
+        </div>
     </div>
 </div>
